--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "types": "types/qr-scanner.d.ts",
   "files": [
     "LICENSE",
-    "qr-scanner.min.js",
-    "qr-scanner.min.js.map",
-    "qr-scanner-worker.min.js",
-    "qr-scanner-worker.min.js.map",
+    "dist/qr-scanner.min.js",
+    "dist/qr-scanner.min.js.map",
+    "dist/qr-scanner-worker.min.js",
+    "dist/qr-scanner-worker.min.js.map",
     "src/qr-scanner.js",
     "types/qr-scanner.d.ts"
   ],
@@ -41,7 +41,7 @@
   "homepage": "https://github.com/nimiq/qr-scanner#readme",
   "devDependencies": {
     "@ampproject/rollup-plugin-closure-compiler": "^0.8.5",
-    "google-closure-compiler": "^20171112.0.0",
+    "google-closure-compiler": "^20190301.0.0",
     "jsqr-es6": "^1.2.0-2",
     "rollup": "^1.1.2",
     "rollup-plugin-sourcemaps": "^0.4.2"
